--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
-  hive_generator: ^2.0.0
+  hive_generator: any
   build_runner: ^2.3.2
   flutter_test:
     sdk: flutter
